# blaze-ui

./: .dockerignore  .gitignore  .gitlab-ci.yml  .style.yapf  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json  setup.cfg
.ci/scripts/: run_stack_test.py
.docker/: wheel-server-entrypoint
binja_plugin/: Dockerfile  README.md  __init__.py  blaze.py  cfg.py  client_plugin.py  manual-install  messages.py  package_plugin.sh  plugin.json  plugin.json.jq  plugins.json.jq  plugins.json.template  pyproject.toml  pyrightconfig.json  serve-plugin.sh  setup.cfg  types.py
binja_plugin/manual-install/: __init__.py  cfg.py  client_plugin.py  types.py
binja_plugin/src/blaze/: __init__.py  cfg.py  client_plugin.py  colors.py  exceptions.py  logging_config.py  poi.py  settings.py  snapshot.py  snaptree.py  type_errors.py  types.py  util.py
binja_plugin/stubs/binaryninjaui/: __init__.pyi  _action.pyi  _dockhandler.pyi  _filecontext.pyi  _flowgraphwidget.pyi  _linearview.pyi  _menus.pyi  _preview.pyi  _uicontext.pyi  _viewframe.pyi
server/: .gitignore  Makefile  README.md  hie.yaml  package.yaml  stack-dev.yaml  stack-release.yaml  stack.yaml
server/app/: Main.hs
server/res/: client_ui_body.html
src/: App.tsx
stubs/binaryninjaui/: __init__.pyi  _action.pyi  _dockhandler.pyi  _filecontext.pyi  _flowgraphwidget.pyi  _linearview.pyi  _preview.pyi  _viewframe.pyi
web/: .gitignore  README.md  package-lock.json  package.json  packages.dhall  spago.dhall
web/src/: Main.purs
web/web/: index.html  index.js  style.css
(+53 files in other folders)
