[tool.poetry]
name = "blaze"
version = "0.1.0"  # actual plugin version set with package_plugin.sh
description = "Blaze"
authors = ["Kudu Dynamics"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
