[metadata]
name = blaze
version = 0.1
author = Kudu
author_email = kudy@kududyn.com
description = Blaze
long_description = find paths
url = https:///blaze/blaze-ui

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    websockets
    requests
    typing_extensions

[options.packages.find]
where = src

[isort]
profile = hug
